<resources>
    <string name="app_name">堪设</string>
    <string name="app_id">kanshe</string>
    <string name="app_update_title">堪设版本更新</string>
    <string name="download_progress">%1$.2f / %2$.2fKB （%3$d%%）</string>

    <string name="net_fail_text">当前网络不可用，点此检查网络设置</string>

    <!-- 所有页面title -->
    <string name="title_null"></string>
    <string name="title_customer_service_center">客服中心</string>
    <string name="title_home_page">首页</string>
    <!--<string name="title_mine">我的</string>-->
    <string name="title_setting">设置</string>
    <string name="title_find_login_password">找回登录密码</string>
    <string name="title_modify_login_password">修改登录密码</string>
    <string name="title_work_certificate">申请加入中铁员工宝</string>
    <string name="title_fund_change_into">资金转入</string>
    <string name="title_fund_turn_out">资金转出</string>
    <string name="title_wage_treasure_buying_detail">工资宝转入详情</string>
    <string name="title_wage_treasure_redemption_detail">工资宝赎回详情</string>
    <string name="title_bank_turn_into_detail">联名卡转入详情</string>
    <string name="title_bank_roll_out_detail">联名卡转出详情</string>
    <string name="title_regular_financial_buying_detail">定期理财买入详情</string>
    <string name="title_bill_details">账单详情</string>



    <!-- 用户相关的 -->
    <string name="login_tips">中铁职工专属理财工具</string>
    <string name="login_forget_password">忘记密码 ?</string>
    <string name="login_new_user_sign">新用户注册</string>
    <string name="login_btn">登录</string>
    <string name="btn_sure">确定</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="get_verify_code_again">重新获取</string>
    <string name="register_next_step">下一步</string>
    <string name="register_phone_authentication">手机号认证</string>
    <string name="register_id_number_authentication">身份认证</string>
    <string name="register_tips1">1、注册表示同意</string>
    <string name="registration_agreement">《注册协议》</string>
    <string name="register_privacy_policy">《隐私策略》</string>
    <string name="register_tips2">2、本APP为中铁职工专属理财工具，非中铁职工请勿注册</string>
    <string name="register_done">完成注册</string>
    <string name="register_tips3">3、如果您的信息与人事暂不匹配，且准备好了工作证明，</string>
    <string name="register_tips3_upload_proof">请上传工作证明</string>
    <string name="old_login_password">旧密码</string>
    <string name="new_login_password">新密码</string>
    <string name="confirm_login_password">确认密码</string>
    <string name="id_card">身份证</string>

    <!-- 常见问题 -->
    <string name="common_problem">常见问题</string>
    <string name="common_problem_salary_treasure">工资宝</string>
    <string name="common_problem_financing">理财</string>
    <string name="common_problem_others">其他</string>
    <string name="one_problem">工资宝的收益是如何计算的？</string>
    <string name="two_problem">工资宝赎回几天可以到账呢？</string>
    <string name="three_problem">理财产品的收益是如何计算的？</string>
    <string name="four_problem">如果没有到期赎回，收益是如何计算的？</string>
    <string name="five_problem">中铁联名卡是否安全</string>
    <string name="six_problem">跨行往中铁联名卡转账是否有手续费？</string>
    <string name="online_service">在线客服</string>
    <string name="phone_service">电话客服</string>


    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_tab_page">首页</string>
    <string name="home_tab_found">发现</string>
    <string name="home_tab_me">我的</string>
    <string name="home_btn_transfer_immediately">立即转入</string>

    <!-- 我的 -->
    <string name="me_total_assets">总资产(元)</string>
    <string name="me_yesterday_profit">昨日收益(元)</string>
    <string name="me_accumulated_income">累计收益(元)</string>
    <string name="me_my_account">我的账户</string>
    <string name="me_my_account_type_bank">银行存管</string>
    <string name="me_available_balance">可用余额(元)</string>
    <string name="me_to_change_into">转入</string>
    <string name="me_turn_out">转出</string>
    <string name="me_salary_treasure">工资宝</string>
    <string name="me_total_holdings">持仓总额(元)</string>
    <string name="me_regular_financial_management">定期理财</string>
    <string name="me_uncollected_revenue">待收收益(元)</string>
    <string name="me_invite_workmate">邀请同事</string>
    <string name="me_customer_service_center">客服中心</string>

    <!-- 设置 相关 -->
    <string name="phone_number">手机号</string>
    <string name="txt_setting_gesture_password">手势密码</string>
    <string name="setting_change_gesture_password">修改手势密码</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="reset_transaction_password">重置交易密码</string>
    <string name="clear_local_cache">清空本地缓存</string>
    <string name="safe_exit">安全退出</string>


    <string name="join_immediately">立即加入</string>
    <string name="btn_confirm_transfer">确认转入</string>
    <string name="btn_confirm_turn_out">确认转出</string>

    <!-- 11种状态详情相关文字描述 -->
    <string name="transfer_amount">转入金额（元）</string>
    <string name="roll_out_amount">转出金额（元）</string>
    <string name="purchase_amount">买入金额（元）</string>
    <string name="redemption_amount">赎回金额（元）</string>

    <string name="turn_into_progress">转入进度</string>
    <string name="turn_out_progress">转出进度</string>
    <string name="buying_progress">买入进度</string>
    <string name="redemption_progress">赎回进度</string>
    <string name="payment_progress">回款进度</string>
    <string name="bill_progress">账单进度</string>


</resources>
