<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/common_problem"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingBottom="15dp"
        android:paddingTop="20dp"
        android:text="@string/common_problem"
        android:textColor="@color/txt_black_333333"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/bg_line"
            android:gravity="center"
            android:text="@string/common_problem_salary_treasure"
            android:textColor="@color/txt_black_333333"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_problem"
                android:textColor="@color/txt_black_333333"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_line"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_problem"
                android:textColor="@color/txt_black_333333"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/bg_line"
            android:gravity="center"
            android:text="@string/common_problem_financing"
            android:textColor="@color/txt_black_333333"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_problem"
                android:textColor="@color/txt_black_333333"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_line"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_problem"
                android:textColor="@color/txt_black_333333"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/bg_line"
            android:gravity="center"
            android:text="@string/common_problem_others"
            android:textColor="@color/txt_black_333333"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_problem"
                android:textColor="@color/txt_black_333333"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_line"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_problem"
                android:textColor="@color/txt_black_333333"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>