<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:baselineAligned="false"
    android:paddingBottom="3dp"
    android:paddingTop="3dp">

    <LinearLayout
        android:id="@+id/ll_tab_home"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab_home_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:scaleType="fitXY"
            android:src="@mipmap/tab_home_normal"/>

        <TextView
            android:id="@+id/tv_tab_home_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:text="@string/home_tab_page"
            android:textColor="@color/txt_black_999999"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab_found"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="fitXY"
            android:src="@mipmap/tab_found_normal"/>

        <TextView
            android:id="@+id/tv_tab_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/home_tab_found"
            android:textColor="@color/txt_black_999999"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab_me"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tab_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:scaleType="fitXY"
                android:src="@mipmap/tab_mine_normal"/>

            <TextView
                android:id="@+id/tv_tab_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/home_tab_me"
                android:textColor="@color/txt_black_999999"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>